inference-extensions/inference/ext_proc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-gateway-ext-proc
  namespace: default
  labels:
    app: inference-gateway-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference-gateway-ext-proc
  template:
    metadata:
      labels:
        app: inference-gateway-ext-proc
    spec:
      containers:
      - name: inference-gateway-ext-proc
        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:v0.1.0
        args:
        - -poolName
        - "vllm-llama2-7b-pool"
        - -v
        - "3"
        - -grpcPort
        - "9002"
        - -grpcHealthPort
        - "9003"
        ports:
        - containerPort: 9002
        - containerPort: 9003
        - name: metrics
          containerPort: 9090
        livenessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inference-gateway-ext-proc
  namespace: default
spec:
  selector:
    app: inference-gateway-ext-proc
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090      
  type: ClusterIP
